Fix scrolling issue on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -125,10 +125,13 @@
   }
 }
 
-html,
-body {
+html {
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+body {
+  max-width: 100vw;
 }
 
 body {
